# codeassistant

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  SESSION_STATE.md  pyproject.toml
docs/agents/: domain.md
src/coding_assistant/agents/: architect_agent.py  base.py  dev_agent.py  pm_agent.py  qa_agent.py  registry.py  reviewer_agent.py
src/coding_assistant/cli/: main.py
src/coding_assistant/core/: error_handler.py  host.py  pipeline.py  types.py  workspace.py  workspace_manager.py
src/coding_assistant/llm/: client.py  config.py  templates.py
src/coding_assistant/tools/: code_executor.py  file_system.py  git_operations.py
tests/e2e/: test_pipeline.py
tests/unit/: test_agent_base.py  test_architect_agent.py  test_cli.py  test_code_executor.py  test_config.py  test_dev_agent.py  test_error_handler.py  test_file_system.py  test_git_operations.py  test_host.py  test_llm.py  test_llm_client.py  test_pm_agent.py  test_qa_agent.py  test_reviewer_agent.py  test_workspace.py
